force-app/main/default/objects/AuthorizeNetLog__c/AuthorizeNetLog__c.object-meta.xml
<CustomObject>
    <label>AuthorizeNetLog</label>
    <nameField>
        <label>AuthorizeNetLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuthorizeNetLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>